update logging to not use < > change micronaut to be blocking at controller level (uses virtual threads in these cases) change grpc to a named executor